# bowfishing-blitz

./: .gitignore  Cargo.toml  README.md
assets/: SOURCES.md  crunchtex.sh
html/: bowfishing_blitz.js  bowfishing_blitz_bg.wasm  index.html
src/: arrows.rs  audio_util.rs  boat_rail.rs  camera.rs  deferred_renderer.rs  fragtex.rs  gputil.rs  lib.rs  main.rs  noise.wgsl  rail-path.csv  shaders.wgsl  targets.rs  terrain_view.rs  ui.rs
src/gputil/: asset.rs  mip.rs  mod.rs
src/shaders/: arrows.wgsl  global.wgsl  lighting.wgsl  mip.wgsl  mod.rs  noise.wgsl  targets.wgsl  terrain.wgsl  terrain_map.wgsl  ui.wgsl
