[package]
name = "bowfishing_blitz"
version = "0.1.0"
edition = "2021"

default-run = "bowfishing_blitz"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version="1.24.0", features=["derive"]}
env_logger = "0.11.8"
glam = {version="0.30.9", features=["bytemuck"]}
half = {version="2.7.1", features=["bytemuck"]}
image = {version = "0.24.8", default-features=false, features=["png", "hdr"]}
log = "0.4.29"
pollster = "0.4.0"
wgpu = "26.0.1"
winit = {version = "0.30.12", default-features = false, features = ["rwh_06", "x11"]}
rgbe = "0.0.2"
rand = "0.9.2"
kira = "0.8.7"
sobol_burley = "0.5.0"
rc-zip-sync = "4.4.2"

[patch.crates-io]

[profile.dev.package."*"]
opt-level = 3
